force-app/main/default/objects/Individual_Session_Enrollment__c/Individual_Session_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Study session enrollment for an individual</description>
    <label>Individual Session Enrollment</label>
    <nameField>
        <displayFormat>ISN-{00000}</displayFormat>
        <label>Individual Session Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Session Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>