force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Attendance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Percentage__c</fullName>
    <description>Calculates the attendance percentage by considering attended, absent and excused sessions.</description>
    <formula>(Total_Attended__c + Total_Excused__c) / IF((Total_Attended__c + Total_Excused__c + Total_Absent__c) &gt; 0, (Total_Attended__c + Total_Excused__c + Total_Absent__c), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the attendance percentage by considering attended, absent and excused sessions.</inlineHelpText>
    <label>Attendance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>