force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>CASESAFEID( Individual_Enrollment__r.Contact__c )</formula>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>