force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>IF( ISBLANK(Individual_Enrollment__r.Contact__r.FirstName ), &apos;&apos;, Individual_Enrollment__r.Contact__r.FirstName + &apos; &apos;) + Individual_Enrollment__r.Contact__r.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>