force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Faculty_Role__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Role__c</fullName>
    <description>Denotes the roles this faculty member will perform.</description>
    <inlineHelpText>Denotes the roles this faculty member will perform.</inlineHelpText>
    <label>Faculty Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Faculty_Roles</valueSetName>
    </valueSet>
</CustomField>