force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Individual_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Enrollment</label>
    <referenceTo>Individual_Enrollment__c</referenceTo>
    <relationshipLabel>Individual Session Enrollments</relationshipLabel>
    <relationshipName>Individual_Session_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>