force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Track student scheduler allocation notes.</description>
    <inlineHelpText>Track student scheduler allocation notes.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>