force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Study_Session__c.field-meta.xml
<CustomField>
    <fullName>Study_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Session</label>
    <referenceTo>Study_Session__c</referenceTo>
    <relationshipLabel>Individual Session Enrollments</relationshipLabel>
    <relationshipName>Individual_Session_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>