force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Total_Excused__c.field-meta.xml
<CustomField>
    <fullName>Total_Excused__c</fullName>
    <label>Total Excused</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>