force-app/main/default/objects/Individual_Session_Enrollment__c/fields/Waitlist_Date__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Date__c</fullName>
    <label>Waitlist Date</label>
    <type>DateTime</type>
</CustomField>