force-app/main/default/objects/Individual_Session_Enrollment__c/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>Student enrollment</description>
    <label>Student</label>
</RecordType>