force-app/main/default/objects/Individual_Session_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact_Name__c</columns>
    <columns>Study_Session__c</columns>
    <columns>Individual_Enrollment__c</columns>
    <columns>Enrollment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>