force-app/main/default/objects/Individual_Session_Enrollment__c/listViews/All_Faculty_Assignments.listView-meta.xml
<ListView>
    <fullName>All_Faculty_Assignments</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact_Name__c</columns>
    <columns>Study_Session__c</columns>
    <columns>Individual_Enrollment__c</columns>
    <columns>Enrollment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Individual_Session_Enrollment__c.Faculty</value>
    </filters>
    <label>All Faculty Assignments</label>
</ListView>