force-app/main/default/objects/Individual_Session_Enrollment__c/listViews/All_Student_Enrollments.listView-meta.xml
<ListView>
    <fullName>All_Student_Enrollments</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact_Name__c</columns>
    <columns>Study_Session__c</columns>
    <columns>Individual_Enrollment__c</columns>
    <columns>Enrollment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Individual_Session_Enrollment__c.Student</value>
    </filters>
    <label>All Student Enrollments</label>
</ListView>